# TC-Embrapa-FIAP

./: .gitignore  Dockerfile  README.md  alembic.ini  env_example  pyproject.toml  requirements.txt
alembic/: env.py  script-create-migration.txt
alembic/versions/: 0fa9a0612507_adiciona_herança_classe_registro.py  3ed539e9e701_criação_de_classes_processamento_e_.py  7a8319a08a95_inclusão_de_tabelas_produção_e_.py  a33dd593bd8f_ajuste_nome_da_identidade_da_tabela_.py  a82f567bbc59_criação_inicial_das_tabelas_de_.py  ae18d197b2f0_alteracao_da_tipagem_do_campo_source_id.py  b0aa2b7a072a_criação_inicial_das_tabelas_de_.py  b50e4ef3db1b_inclusao_de_tab_adicionais.py  c00cee8dbd5e_adiciona_herança_classe_registro.py  c0854255dc64_initial_migration.py  c1d387864fdc_estrutura_inicial.py  cdc8bc4717dc_atualização_inicial.py  cfe579d127ca_inclusao_do_indices.py  d3c875955325_ajuste_de_nulidade_de_campos_controle_.py  eea7503660cf_ajuste_dos_campos_numerico.py  fba3994ad31b_inclusao_do_campo_source_id.py
app/: __init__.py  config.py  database.py  database_operations.py  dto.py  main.py  model.py  models.py  routes.py  scraper.py  urls.py  urls_download.py  urls_scrapping.py
app/data/: ProcessaAmericanas.csv  ProcessaMesa.csv  ProcessaSemclass.csv  ProcessaViniferas.csv  Producao.csv
app/database/: config.py  session.py
app/dto/: exportacao.py  importacao.py  registro_quantidade_valor.py  registro_total.py  subitem.py  token.py  user.py
app/model/: entidades.py  model.py
app/repository/: imp_exp_db_repository.py  imp_exp_embrapa_repository.py  op_internas_db_repository.py  op_internas_embrapa_repository.py  scapper_repository.py  user_repository.py
app/routes/: auth.py  opcoes.py
app/service/: auth_service.py  imp_exp_service.py  op_internas_service.py
app/static/: index.html
app/templates/: index.html  login.html  template.html
app/util/: collections.py  converter.py  csv.py  etl.py  reader.py  (+1 more)
tests/: test_auth_service.py  test_cad_user.py  test_collections.py  test_connection.py  test_converter.py  test_csv_util.py  test_etl.py  test_imp_exp_db_repository.py  test_imp_exp_service.py  test_metadata.py  test_op_internas_db_repository.py  test_op_internas_service.py  test_reader.py  test_scapper_repository.py  test_strategy_just_item.py  test_strategy_with_subitems.py  test_user_repository.py
(+23 files in other folders)
